--- a/todo/main.css
+++ b/todo/main.css
@@ -39,8 +39,15 @@ header .sign-out {
   background: gray;
 }
 
+header .profile-img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
 header .profile-img img {
-  width: 3.5rem;
+  height: 100%;
 }
 
 main {
